fixing RCE description

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                             <p>Check out the code on <a href = "https://github.com/colinbking/me.nu" target = "_blank">Github</a>, our <a href = "https://devpost.com/software/me-nu" target = "_blank">devpost</a></p>
                                     </div>
                                     <div class="modal-footer">
-                                        <h3> Winner of Hackrice 9 Overall and <i> Best Use of Data Science (awarded by Two Sigma)</i>
+                                        <h3> Awarded Overall Winner of Hackrice 9 and <i> Best Use of Data Science </i> (from Two Sigma)
                                         </h3>
                                     </div>
                                 </div>
@@ -274,7 +274,7 @@
                                             <p>Check out the code on <a href="https://github.com/colinbking/riceDatathon2020/" target="_blank">Github</a>, our <a href="https://devpost.com/software/course-evaluation-analytics" target="_blank">devpost</a>, and the <a href = "https://news.rice.edu/2020/02/10/rice-students-sweep-second-datathon/"  target="_blank">article publsihed by Rice featuring us!</a></p>
                                         </div>
                                         <div class="modal-footer">
-                                            <h3> Winner of Rice Datathon 2020 Overall </h3>
+                                            <h3> Overall Winner at Rice Datathon 2020  </h3>
                                         </div>
                                     </div>
                                 </div>
@@ -285,8 +285,7 @@
                                     <a style="cursor:pointer" id = modalbtn2 class="image featured" ><img class="proj-image" src="https://github.com/colinbking/aware/raw/master/app/src/main/res/mipmap-hdpi/car_icon.png" alt="" /></a>
                                     <header><h3>Aware</h3></header>
                                     <p>
-                                        Using computer vision to read menus and data science to the dishes at any restaurant best 
-                                        suited for your palate.<br/>
+                                        Taking advantage of the advent of 5g to increase driver safety. Allows drivers to easily communicate intent on the road with minimal distraction .<br/>
                                     </p>
                                     <!-- The Modal -->
                                     <div id="project_modal" class="modal">
